# Eocene-creator

./: .gitignore  README.md  environment.yaml  pyproject.toml
NEMO/: add_lonlat.py  eocene_creator_nemo.py  modify_nemo.ipynb  orca2_create.old
OIFS/: OIFS_workflow.md  biomes.py  eocene_creator.py  eocene_functions.py  modify_oifs.ipynb  nulify.nc  oifs_generator.py  tmp.grib  utils.py
ece-fast/nemo/: test_levels.ipynb
ece-fast/nemo/grids/: L75.txt
ece-fast/nemo/weights/: namelist_bilin_goutorbe  namelist_bilin_woa13_L31  namelist_bilin_zdfiwm  (+2 more)
ecefast/analysis/: paleorca-vs-orca.ipynb
ecefast/nemo/: NEMO_WORKFLOW_STEPS.md  NEMO_workflow.md  cli-domain-paleorca.py  mask_util_create.py  nemo-workflow.sh  nemo_workflow.yaml  orca_bounds.py
ecefast/nemo-new/: NEMO_WORKFLOW_STEPS.md  cli-domain-paleorca.py  config-namelist-domain.py  generate-mask-util.py  generate-orca-bounds.py  namelist_cfg.j2  nemo-workflow.sh  process-paleorca-bathymetry.py
ecefast/nemo-old/: orca_levels.py
ecefast/oifs/: oifs_generator.py  utils_oifs.py
eocene/: __init__.py  cli-eocene.py  config.tmpl  config.yml  eocene.py
eocene/analysis/: amoc-analysis.ipynb  iwm-analysis.ipynb
eocene/common/: __init__.py  logger.py  yaml.py
eocene/nemo/: eoceneNEMO.py  eocene_creator_nemo.py  modify_nemo.ipynb
eocene/oasis/: eoceneOASIS.py
eocene/oifs/: OIFS_workflow.md  albedo.py  eoceneOIFS.py  eocene_creator.py  filtered.grib  fix_grib.sh  helper_functions.py  input.grb  modify_oifs.ipynb  singlefile.nc  subgrid_orog.py  utils.py  vegetation.py
eocene/rnfm/: eoceneRNFM.py  runoff.py
(+17 files in other folders)
